<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.signup.SignUpEndFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_logo_mascota_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_illust"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_illust_loginsignup_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="304:142"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAppearance="@style/h1"
            android:textColor="@color/maco_orange"
            app:layout_constraintStart_toStartOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            tools:text="@string/dummy_email" />

        <TextView
            android:id="@+id/tv_sir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sir"
            android:textAppearance="@style/h1"
            android:textColor="@color/maco_dark_gray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_id"
            app:layout_constraintStart_toEndOf="@+id/tv_id" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_pet"
            android:textAppearance="@style/h1"
            android:textColor="@color/maco_dark_gray"
            app:layout_constraintStart_toStartOf="@+id/tv_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>